[package]
name = "hdrepresentation"
authors = ["docfate111"]
version = "0.1.83"
edition = "2021"
description = "HYDRAulic Damnation's representation of filesystem for fuzzing"
license = "MIT"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"]}
serde_json = "1.0.85"
